@@ -193,6 +193,15 @@ show_full_commandline = 1
 # thruk will show a inline graph on the extinfo page
 shown_inline_pnp = 1
 
+# show custom vars in host / service ext info.
+# list variable names to display in the host
+# and service extinfo details page.
+# can be specified more than once to define multiple
+# variables. You may use html in your variables.
+#show_custom_vars = _VAR1
+#show_custom_vars = _VAR2
+
+
 ######################################
 # Command Settings
 # Set this if a contact should be allowed to send commands unless
